--- a/Final Project.ipynb
+++ b/Final Project.ipynb
@@ -64,8 +64,7 @@
     "from ipywidgets import interact, interactive, fixed, interact_manual\n",
     "\n",
     "\n",
-    "# vendor_dataset = pd.read_csv(\"https://gs.statcounter.com/vendor-market-share/mobile/worldwide/chart.php?device=Mobile&device_hidden=mobile&statType_hidden=vendor&region_hidden=ww&granularity=yearly&statType=Device%20Vendor&region=Worldwide&fromInt=2010&toInt=2022&fromYear=2010&toYear=2022&csv=1\")\n",
-    "vendor_dataset =  pd.read_csv(r\"C:\\Users\\23137\\Desktop\\445\\DataViz\\vendor-ww-yearly-2010-2022.csv\")\n",
+    "vendor_dataset = pd.read_csv(\"https://gs.statcounter.com/vendor-market-share/mobile/worldwide/chart.php?device=Mobile&device_hidden=mobile&statType_hidden=vendor&region_hidden=ww&granularity=yearly&statType=Device%20Vendor&region=Worldwide&fromInt=2010&toInt=2022&fromYear=2010&toYear=2022&csv=1\")\n",
     "\n",
     "\n",
     "# This cell imports several modults that will be used. The vendor dataset can be directly accessed by web url."
